--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mysql": "^2.18.1",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "winston-daily-rotate-file": "^4.5.0",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
