--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "password-hash": "^1.2.2",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
