--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mysql": "^2.18.1",
     "password-hash": "^1.2.2",
     "serve-favicon": "^2.5.0",
+    "socket.io": "^2.3.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
     "xml-js": "^1.6.11"
