--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "password-hash": "^1.2.2",
     "serve-favicon": "^2.5.0",
     "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.1",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0",
     "xml-js": "^1.6.11"
