--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "query-string": "^6.13.5",
+    "rc-tree": "^4.0.0-beta.2",
     "react": "^16.14.0",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
@@ -66,6 +67,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-select": "^3.1.0",
+    "react-sortable-tree": "^2.8.0",
     "recharts": "^1.8.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
