--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,25 @@
 {
-    "extends": [
-        "react-app",
-        "plugin:prettier/recommended"
-    ],
-    "rules": {
-        "no-alert": "off",
-        "no-console": "warn",
-        "no-restricted-globals": "off",
-        "jsx-a11y/anchor-is-valid": "off",
-        "no-script-url": "off",
-        "no-useless-escape": "off"
-    },
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "jquery": true
-    }
+  "extends": ["react-app", "plugin:prettier/recommended"],
+  "rules": {
+    "no-alert": "off",
+    "no-console": "warn",
+    "no-restricted-globals": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "no-script-url": "off",
+    "no-useless-escape": "off",
+    "linebreak-style": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      },
+      { "usePrettierrc": true }
+    ]
+  },
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "jquery": true
+  }
 }
