--- a/package.json
+++ b/package.json
@@ -154,10 +154,12 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.2",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2",
-    "prettier-eslint": "^11.0.0"
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
+    "cross-env": "^5.2.0",
+    "eslint-config-prettier": "4.1.0",
+    "eslint-plugin-prettier": "3.0.1",
+    "prettier": "1.16.4",
+    "prettier-eslint": "8.8.2",
+    "shortid": "^2.2.14"
   }
 }
