--- a/package.json
+++ b/package.json
@@ -163,5 +163,7 @@
     "prettier": "1.16.4",
     "prettier-eslint": "8.8.2",
     "shortid": "^2.2.14"
-  }
+  },
+  "homepage": "/",
+  "proxy": "http://localhost:8090"
 }
