--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "rc-tree": "^4.0.0-beta.2",
     "react": "^16.14.0",
     "react-app-polyfill": "^1.0.6",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
