--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "image-size": "^0.9.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
@@ -34,6 +35,7 @@
     "mysql": "^2.18.1",
     "password-hash": "^1.2.2",
     "serve-favicon": "^2.5.0",
+    "sharp": "^0.26.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
     "winston": "^3.3.3",
