파일 업로드 반영

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT=8090
+FILE_UPLOAD_PATH=upload
+FILE_SAVE_PATH=attach
+FILE_DOWNLOAD_URL=https://cstalk-prototype.herokuapp.com/api/file/
 GASAPP_MOBILE_URL=https://app-dev.gasapp.co.kr/
 SEOUL_MIS_URL=http://msc-dev-relay:12081/
 SEOUL_RELAY_URL=https://relay-scg.gasapp.co.kr/
