--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 PORT=8090
 FILE_UPLOAD_PATH=upload
 FILE_SAVE_PATH=attach
-FILE_DOWNLOAD_URL=http://10.100.20.70:8090/file/
+FILE_DOWNLOAD_URL=http://10.100.20.70:8090/api/file/
 GASAPP_MOBILE_URL=https://app-dev.gasapp.co.kr/
 SEOUL_MIS_URL=http://msc-dev-relay:12081/
 SEOUL_RELAY_URL=https://relay-scg.gasapp.co.kr/
