--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "local": "cross-env NODE_ENV=local node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,7 @@
     "mysql": "^2.18.1",
     "password-hash": "^1.2.2",
     "serve-favicon": "^2.5.0",
-    "sharp": "^0.26.3",
+    "sharp": "^0.27.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.1",
     "winston": "^3.3.3",
